--- a/src/pages/auth.css
+++ b/src/pages/auth.css
@@ -17,10 +17,9 @@
   height: 100%;
   background: linear-gradient(
     135deg,
-    #1f0047 0%,
-    #480d7c 30%,
-    #3b125f 70%,
-    #3c006d 100%
+    rgba(88, 109, 14, 0.8) 0%,
+    rgba(165, 150, 165, 0.8) 50%,
+    rgba(29, 64, 117, 0.8) 100%
   );
   background-size: 400% 400%;
   animation: gradientBG 5s ease-in-out infinite;
@@ -36,14 +35,15 @@
   font-style: normal;
 } */
 .login-form {
-  background: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
   font-family: sans-serif;
   font-optical-sizing: auto;
   color: #eee;
   backdrop-filter: blur(3em);
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  gap: 0.4em;
   justify-content: center;
   align-items: center;
   padding: 1em;
@@ -56,21 +56,24 @@
 }
 .form-field {
   display: flex;
+  width: 100%;
+  flex-grow: 3;
+  flex-basis: auto;
   flex-direction: column;
-  gap: 1em;
-  margin-bottom: 1em;
+  gap: 0.2em;
+  /* margin-bottom: 0em; */
 }
 
 .ff-label {
   font-family: "Marhey", sans-serif;
-  font-size: 1.2em;
-  color: #ccd4d4;
+  font-size: 1.1em;
+  color: #1058b4;
   text-align: left;
   font-weight: 600;
   /* text-transform: uppercase; */
   letter-spacing: 0.1em;
 }
-.ff-label::after {
+/* .ff-label::after {
   content: "";
   display: block;
   width: 50%;
@@ -84,12 +87,12 @@
   -moz-border-radius: 0.5em;
   -ms-border-radius: 0.5em;
   -o-border-radius: 0.5em;
-}
+} */
 .ff-input {
-  padding: 1em;
+  padding: 0.4em 1em;
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.2);
   color: #ffffff;
   font-size: 1em;
   font-weight: 400;
@@ -101,43 +104,38 @@
   overflow: hidden;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  &:focus {
-    outline: none;
-    border: 1px solid #ccc;
-    background: rgba(0, 0, 0, 0.3);
-    box-shadow: 0 0 2em 0.1em rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-  }
-  &:hover {
-    border: 1px solid #ccc;
-    background: rgba(255, 255, 255, 0.2);
-    box-shadow: 0 0 2em 0.1em rgba(100, 100, 100, 0.2);
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-  }
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
 }
+
+.ff-input:focus {
+  outline: none;
+  border: 1px solid #ccc;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 2em 0.1em rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.ff-input:hover {
+  border: 1px solid #ccc;
+  background: rgba(175, 175, 175, 0.4);
+  box-shadow: 0 0 2em 0.1em rgba(100, 100, 100, 0.2);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
 .form-err-msg {
-  color: #cc0000;
+  color: #c72020;
   font-size: 1em;
   font-weight: 500;
   text-align: left;
   text-decoration: none;
   text-transform: none;
   text-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
-  margin-top: -0.3em;
+  /* margin-top: -0.1em; */
   padding-left: 0.5em;
 }
 /* .form-err-msg::before {
